--- a/example.ipynb
+++ b/example.ipynb
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
        "(585, 10)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,14 +721,16 @@
     ")\n",
     "\n",
     "model_ridge = RidgeRegression()\n",
-    "model_ridge_grad = RidgeRegression(type=\"grad\", learning_rate=1e-3, n_iterations=20000)\n",
+    "model_ridge_grad = RidgeRegression(\n",
+    "    type=\"grad\", learning_rate=0.01, n_iterations=1000, alpha=0.1\n",
+    ")\n",
     "\n",
     "model_lasso_grad = LassoRegression(type=\"grad\", learning_rate=1e-3, n_iterations=20000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,20 +739,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.6742384655092867,\n",
-       " 319331.7768415041,\n",
-       " 692.2726395081401,\n",
-       " 0.15976484566793434,\n",
-       " 565.0944848797448)"
+       "(0.7089037936338922,\n",
+       " 3271162.3630762273,\n",
+       " 665.8372478458157,\n",
+       " 0.1601306018062075,\n",
+       " 1808.6354975716438)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,20 +771,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.6729991363400278,\n",
-       " 367901.353175292,\n",
-       " 692.6623492404433,\n",
-       " 0.16188144846075592,\n",
-       " 606.5487228370793)"
+       "(0.711539011261672,\n",
+       " 2144240.457644738,\n",
+       " 653.3216164378259,\n",
+       " 0.15978739415225912,\n",
+       " 1464.3225251442177)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,20 +803,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.6716046393377026,\n",
-       " 335196.51584470295,\n",
-       " 693.1824582716348,\n",
-       " 0.15990094517314915,\n",
-       " 578.9615840836963)"
+       "(0.7081473784694823,\n",
+       " 3245874.511069193,\n",
+       " 663.3256271561927,\n",
+       " 0.15932981640296193,\n",
+       " 1801.6310696336232)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,20 +835,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.6698408232613369,\n",
-       " 378638.00192695955,\n",
-       " 694.689609329393,\n",
-       " 0.16248614368664901,\n",
-       " 615.3356823124753)"
+       "(0.6156834837607372,\n",
+       " 770023.3907272359,\n",
+       " 655.0745699297604,\n",
+       " 0.1516980896987757,\n",
+       " 877.509766741793)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,20 +867,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.6722317574149089,\n",
-       " 371959.5484277012,\n",
-       " 692.9763036974034,\n",
-       " 0.16188584727644106,\n",
-       " 609.8848648947612)"
+       "(0.7112781411586677,\n",
+       " 2145038.9611373944,\n",
+       " 652.8600391080619,\n",
+       " 0.1595446266071785,\n",
+       " 1464.5951526402764)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1322,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,20 +1336,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.6742384655092859,\n",
-       " 319331.7768413687,\n",
-       " 692.2726395081398,\n",
-       " 0.15976484566793406,\n",
-       " 565.0944848796249)"
+       "(0.7089037936338906,\n",
+       " 3271162.3630767884,\n",
+       " 665.8372478458166,\n",
+       " 0.16013060180620692,\n",
+       " 1808.6354975717989)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1781,7 +1783,7 @@
        "Lasso()"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1793,20 +1795,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.6724030895970275,\n",
-       " 325435.2567896837,\n",
-       " 692.7630809800229,\n",
-       " 0.15973347444191638,\n",
-       " 570.4693302796248)"
+       "(0.7085119642468514,\n",
+       " 3267609.921469322,\n",
+       " 664.2372890438043,\n",
+       " 0.15953630841625643,\n",
+       " 1807.6531529774516)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1824,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2240,7 +2242,7 @@
        "Ridge()"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2252,20 +2254,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.6705405967286636,\n",
-       " 316034.3999274641,\n",
-       " 694.019882284751,\n",
-       " 0.15999175301154658,\n",
-       " 562.1693694319035)"
+       "(0.7081473784694858,\n",
+       " 3245874.511068147,\n",
+       " 663.325627156191,\n",
+       " 0.1593298164029633,\n",
+       " 1801.6310696333328)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2280,6 +2282,13 @@
     "    rmse_score(y_pred, y_test),\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
