Add elastic net

--- a/example.ipynb
+++ b/example.ipynb
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -608,6 +608,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -640,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +679,7 @@
        "(585, 10)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,28 +718,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from models.linear import LassoRegression, LinearRegression, RidgeRegression\n",
+    "from models.linear import ElasticNet, LassoRegression, LinearRegression, RidgeRegression\n",
     "\n",
     "model_linear = LinearRegression()\n",
     "model_linear_grad = LinearRegression(\n",
-    "    type=\"grad\", learning_rate=1e-3, n_iterations=20000\n",
+    "    type=\"grad\", learning_rate=1e-3, n_iterations=10000\n",
     ")\n",
     "\n",
     "model_ridge = RidgeRegression()\n",
-    "model_ridge_grad = RidgeRegression(\n",
-    "    type=\"grad\", learning_rate=0.01, n_iterations=1000, alpha=0.1\n",
-    ")\n",
+    "model_ridge_grad = RidgeRegression(type=\"grad\", learning_rate=1e-3, n_iterations=10000)\n",
     "\n",
-    "model_lasso_grad = LassoRegression(type=\"grad\", learning_rate=1e-3, n_iterations=20000)"
+    "model_lasso_grad = LassoRegression(type=\"grad\", learning_rate=1e-3, n_iterations=10000)\n",
+    "\n",
+    "model_elastic_grad = ElasticNet(\n",
+    "    type=\"grad\", l1_ratio=0.5, learning_rate=1e-3, n_iterations=10000\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,20 +750,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7089037936338922,\n",
-       " 3271162.3630762273,\n",
-       " 665.8372478458157,\n",
-       " 0.1601306018062075,\n",
-       " 1808.6354975716438)"
+       "(0.7209215863296847,\n",
+       " 2756075.4068166385,\n",
+       " 664.4747673430415,\n",
+       " 0.19393322410589933,\n",
+       " 1660.1431886486896)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_elastic_grad.fit(X_train_norm, y_train)\n",
+    "y_pred = model_elastic_grad.predict(X_test_norm)\n",
+    "(\n",
+    "    r2_score(y_pred, y_test),\n",
+    "    mse_score(y_pred, y_test),\n",
+    "    mae_score(y_pred, y_test),\n",
+    "    mape(y_pred, y_test),\n",
+    "    rmse_score(y_pred, y_test),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.7588060757378345,\n",
+       " 441130.7065934765,\n",
+       " 599.9642953495365,\n",
+       " 0.26329927498766614,\n",
+       " 664.1767133779056)"
+      ]
+     },
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,20 +814,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.711539011261672,\n",
-       " 2144240.457644738,\n",
-       " 653.3216164378259,\n",
-       " 0.15978739415225912,\n",
-       " 1464.3225251442177)"
+       "(0.7443080721329974,\n",
+       " 1869461.7581606656,\n",
+       " 630.5913618670999,\n",
+       " 0.1962748156152156,\n",
+       " 1367.2826182471076)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,20 +846,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7081473784694823,\n",
-       " 3245874.511069193,\n",
-       " 663.3256271561927,\n",
-       " 0.15932981640296193,\n",
-       " 1801.6310696336232)"
+       "(0.757004157592724,\n",
+       " 431199.40988914424,\n",
+       " 599.8434559125816,\n",
+       " 0.31042813561500215,\n",
+       " 656.6577570463508)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,20 +878,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.6156834837607372,\n",
-       " 770023.3907272359,\n",
-       " 655.0745699297604,\n",
-       " 0.1516980896987757,\n",
-       " 877.509766741793)"
+       "(0.7431693735179399,\n",
+       " 1840598.716713056,\n",
+       " 629.7382351810933,\n",
+       " 0.19205374641878595,\n",
+       " 1356.6866685838172)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,20 +910,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7112781411586677,\n",
-       " 2145038.9611373944,\n",
-       " 652.8600391080619,\n",
-       " 0.1595446266071785,\n",
-       " 1464.5951526402764)"
+       "(0.7444417822967877,\n",
+       " 1864722.7984832164,\n",
+       " 630.0348183451418,\n",
+       " 0.19469139645606678,\n",
+       " 1365.5485339171275)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1365,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1336,20 +1379,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7089037936338906,\n",
-       " 3271162.3630767884,\n",
-       " 665.8372478458166,\n",
-       " 0.16013060180620692,\n",
-       " 1808.6354975717989)"
+       "(0.7588060757378337,\n",
+       " 441130.7065934786,\n",
+       " 599.9642953495377,\n",
+       " 0.2632992749876866,\n",
+       " 664.1767133779072)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1783,7 +1826,7 @@
        "Lasso()"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1795,20 +1838,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7085119642468514,\n",
-       " 3267609.921469322,\n",
-       " 664.2372890438043,\n",
-       " 0.15953630841625643,\n",
-       " 1807.6531529774516)"
+       "(0.7574534503154056,\n",
+       " 440050.9269695234,\n",
+       " 599.9579410277338,\n",
+       " 0.2873455843100001,\n",
+       " 663.3633446080084)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1826,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2242,7 +2285,7 @@
        "Ridge()"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2254,20 +2297,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7081473784694858,\n",
-       " 3245874.511068147,\n",
-       " 663.325627156191,\n",
-       " 0.1593298164029633,\n",
-       " 1801.6310696333328)"
+       "(0.757004157592724,\n",
+       " 431199.4098893358,\n",
+       " 599.843455912582,\n",
+       " 0.3104281356149331,\n",
+       " 656.6577570464966)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
